# metamod-r

./: .gitignore  CMakeLists.txt  Config.mak  Makefile  README.md  README.txt  build.gradle  build.sh  gradle.properties  publish.gradle  settings.gradle  shared_icc.gradle  shared_msvc.gradle  version_script.lds
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  feature_request.md  question.yml  task.yml  task_generic.md  template-bug.yml  template-feature.yml  template-question.yml  template-task.yml
.github/workflows/: build.yml
doc/: Changelog  README.txt  TODO  config.ini  plugins.ini
doc/html/: Index.html  a.html  about.html  coding.html  dllapi_notes.html  engine_notes.html  faq.html  gamesupport.html  links.html  maillist.html  metamod.html  newapi_notes.html  release_notes.html  supportedmods.html  trace.html  wdmisc.html
doc/txt/: Index.txt  a.txt  about.txt  coding.txt  dllapi_notes.txt  engine_notes.txt  faq.txt  gamesupport.txt  links.txt  maillist.txt  metamod.txt  newapi_notes.txt  (+5 more)
hlsdk/: hlsdk_readme.txt
lib/: libirc.lib
metamod/: CMakeLists.txt  Config.mak  Makefile  api_hook.cpp  api_hook.h  api_info.cpp  api_info.h  build.gradle  build_all.sh  commands_meta.cpp  commands_meta.h  comp_dep.h  conf_meta.cpp  conf_meta.h  dllapi.cpp  dllapi.h  engine_api.cpp  engine_api.h  enginecallbacks.h  engineinfo.cpp  engineinfo.h  game_autodetect.cpp  game_autodetect.h  game_support.cpp  game_support.h  games.h  h_export.cpp  h_export.h  info_name.h  linkent.h  linkgame.cpp  linkplug.cpp  log_meta.cpp  log_meta.h  meta_api.h  meta_eiface.cpp  meta_eiface.h  metamod.cpp  metamod.h  metamod.sln  (+36 more)
metamod/extra/: config.ini
metamod/extra/example/: Makefile  dllapi.cpp  engine_api.cpp  ex_rehlds_api.cpp  ex_rehlds_api.h  h_export.cpp  meta_api.cpp  public_amalgamation.cpp
metamod/extra/example/include/hlsdk/common/: entity_state.h  kbutton.h  mathlib.h  vmodes.h
metamod/extra/example/include/hlsdk/dlls/: cbase.h  decals.h  enginecallback.h  extdll.h  player.h  saverestore.h  util.h  vector.h  weapons.h
metamod/extra/example/include/hlsdk/engine/: archtypes.h  osconfig.h  rehlds_api.h  static_map.h
metamod/extra/example/include/hlsdk/pm_shared/: pm_debug.h  pm_defs.h  pm_info.h  pm_materials.h  pm_shared.h
metamod/extra/example/include/hlsdk/public/: engine_hlds_api.h  idedicatedexports.h  interface.cpp  interface.h  registry.cpp  savegame_version.h  steamid.cpp  utlbuffer.h  utllinkedlist.h  utlmemory.h
metamod/extra/example/include/hlsdk/public/steam/: isteambilling.h  isteamhttp.h  isteamutils.h  matchmakingtypes.h  steam_api.h  steamhttpenums.h  steamtypes.h
metamod/extra/example/include/hlsdk/public/tier0/: dbg.cpp  dbg.h
metamod/extra/example/msvc/: example_plugin.def  example_plugin.sln  example_plugin.vcxproj  example_plugin.vcxproj.filters
metamod/include/common/: crc.h  enums.h  hltv.h  netadr.h  quakedef.h
metamod/include/dlls/: enginecallback.h  util.h
metamod/include/engine/: archtypes.h  crc32c.cpp  custom.h  eiface.h  hookchains.h  maintypes.h  model.h  rehlds_api.h  sys_shared.cpp
metamod/include/public/: basetypes.h  engine_launcher_api.h  interface.h  iregistry.h  keydefs.h  pman_particlemem.h  utlbuffer.cpp  utllinkedlist.h  utlrbtree.h  utlvector.h
metamod/msvc/: PreBuild.bat  metamod.def  metamod.rc  metamod.vcxproj  metamod.vcxproj.filters  test.bat
metamod/src/: api_hook.cpp  api_hook.h  api_info.cpp  api_info.h  callback_jit.cpp  callback_jit.h  commands_meta.cpp  commands_meta.h  comp_dep.h  conf_meta.cpp  conf_meta.h  dllapi.cpp  dllapi.h  engine_api.cpp  engine_api.h  engine_t.h  enginecallbacks.h  game_support.cpp  game_support.h  games.h  glibc_compat.cpp  h_export.cpp  h_export.h  info_name.h  jitasm.h  linkent.cpp  linkent.h  linkgame.cpp  linkplug.cpp  log_meta.cpp  log_meta.h  mdebug.cpp  mem_utils.cpp  meta_api.h  meta_eiface.cpp  meta_eiface.h  meta_rehlds_api.cpp  metamod.cpp  metamod.h  metamod_rehlds_api.cpp  (+43 more)
metamod/version/: appversion.sh  appversion.vm  version.h
msvc/: metamod.def  metamod.sln  metamod.vcxproj  metamod.vcxproj.filters  res_meta.rc
src/: api_hook.cpp  api_hook.h  api_info.cpp  api_info.h  commands_meta.cpp  commands_meta.h  comp_dep.h  conf_meta.cpp  conf_meta.h  dllapi.cpp  dllapi.h  engine_api.cpp  engine_api.h  engine_t.h  engineinfo.cpp  engineinfo.h  game_autodetect.cpp  game_autodetect.h  game_support.cpp  game_support.h  games.h  h_export.cpp  h_export.h  info_name.h  linkent.h  linkplug.cpp  log_meta.cpp  log_meta.h  meta_api.h  meta_eiface.cpp  meta_eiface.h  metamod.cpp  metamod.h  mlist.cpp  mlist.h  mm_pextensions.h  mplayer.cpp  mplayer.h  mplugin.cpp  mplugin.h  (+25 more)
stub_plugin/: Config.mak  Makefile  dllapi.cpp  engine_api.cpp  h_export.cpp  meta_api.cpp  sdk_util.cpp
tools/: getents.sh  stlfilter
trace_plugin/: Config.mak  api_info.cpp  dllapi.cpp  dllapi_post.cpp  dllapi_post.h  engine_api.cpp  engine_api_post.cpp  engine_api_post.h  info_name.h  log_plugin.h  meta_api.cpp  plugin.cpp  res_meta.rc  trace_api.cpp  trace_api.h  vdate.cpp
wdmisc_plugin/: .gitignore  Config.mak  dll_plugin.cpp  dll_plugin.h  engine_api.cpp  h_export.cpp  info_name.h  log_plugin.cpp  plugin.h  sdk_util.cpp  wdmisc.cpp  wdmisc.h
(+33 files in other folders)
